...


  @override
  Widget build(BuildContext context) {

    return ElevatedButton(
      key: const Key('gymModeButton'),
      onPressed: () {
        Navigator.of(context).push(
          MaterialPageRoute(
              builder: (context) => const MainPage())
        );
      },
...
