...
                    decoration: const InputDecoration(
                      labelText: 'Name',
                    ),
                    onChanged: (text){

                      setState(() {
                        exerciseName = text;
                      });
                    },
                  )
              ),
              Text("Exercise Description:", style: Theme.of(context).textTheme.headlineSmall,),
              Padding(
...
