...
          return Column(
            crossAxisAlignment: CrossAxisAlignment.stretch,
            children: [

              //search bar
              Padding(
                key: const Key("searchBar"),
                padding: const EdgeInsets.all(8.0),
                child: TextField(
                  onChanged: (value){
                    filterSearchResults(value);
                  },
                  controller: editingController,
...
