...
                                            borderRadius: BorderRadius.circular(16.0),
                                          ),
                                          title: const Text("Are you sure?"),
                                          content: const Text("This training will be deleted forever!."),
                                          actions: [
                                            ElevatedButton(
                                              key: const Key('delete'),
                                              onPressed: () {
                                                allTrainingsBloc.add(DeleteTraining(
                                                    trainingID: training.id,
                                                    userID: user.id
                                                ));

...
